# topological-dictionary-learning

./: .gitignore  LICENSE  README.md  pyproject.toml
.conf/: multirun.yaml  real.yaml  table.yaml  training.yaml
.conf/plotting/: plt.mplstyle
.scache/: DataTS.pkl
cache/: DataTS.pkl
config/: algorithm.yaml  config.yaml  visualization.yaml
data/real/: data_real.mat
scripts/: dict_learn.py  dict_topo_learn.py  organize_data.py  topo_learn.py  topo_learn_multirun.py  topo_learn_real.py  utils.py  visualizations.py  visualize.py
src/: EnhancedGraph.py  Hodgelets.py  TopoSolver.py  __init__.py  data_generation.py  utils.py  utilsHodgelets.py  utilsTopoSolver.py
synthetic_data/max_sparsity25/: top_data_T10.pkl
topolearn/: EnhancedGraph.py  Hodgelets.py  TopoSolver.py  __init__.py  data_generation.py  utils.py  utilsHodgelets.py  utilsTopoSolver.py  visualization.py
